[gd_scene load_steps=14 format=3 uid="uid://bhjqyr641p88q"]

[ext_resource type="Texture2D" uid="uid://b50c7otsrc8f6" path="res://Assets/Fish.png" id="1_0l0pj"]
[ext_resource type="Script" path="res://Script/fish.gd" id="1_phlq8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0osj5"]
radius = 25.0
height = 150.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ef552"]
atlas = ExtResource("1_0l0pj")
region = Rect2(0, 0, 212, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5e2r"]
atlas = ExtResource("1_0l0pj")
region = Rect2(212, 0, 212, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipy2g"]
atlas = ExtResource("1_0l0pj")
region = Rect2(424, 0, 212, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_26gao"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef552")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5e2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipy2g")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_7j25k"]
resource_name = "Fish"

[sub_resource type="Animation" id="Animation_t7rc2"]
resource_name = "Idle"
length = 0.30001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_2860n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_86f3a"]
_data = {
"Fish": SubResource("Animation_7j25k"),
"Idle": SubResource("Animation_t7rc2"),
"RESET": SubResource("Animation_2860n")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ko2ss"]
radius = 49.9999
height = 100.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f3orc"]
radius = 4.0
height = 10.0

[node name="Fish" type="CharacterBody2D"]
scale = Vector2(0.2, 0.2)
script = ExtResource("1_phlq8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, 0)
scale = Vector2(0.2, 0.2)
shape = SubResource("CapsuleShape2D_0osj5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 3.14159
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_26gao")
animation = &"Idle"
frame = 1
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_86f3a")
}

[node name="FishHitbox" type="Area2D" parent="."]
scale = Vector2(5, 5)
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FishHitbox"]
position = Vector2(2, 0)
rotation = 1.5708
scale = Vector2(0.04, 0.04)
shape = SubResource("CapsuleShape2D_ko2ss")

[node name="FishHurtbox" type="Area2D" parent="."]
scale = Vector2(5, 5)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FishHurtbox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_f3orc")

[connection signal="body_entered" from="FishHitbox" to="." method="_on_fish_hitbox_entered"]
[connection signal="body_exited" from="FishHitbox" to="." method="_on_fish_hitbox_exited"]
[connection signal="area_entered" from="FishHurtbox" to="." method="_on_fish_hurtbox_area_entered"]
